; ModuleID = '/home/carl/AnghaBench/freebsd/sys/fs/autofs/extr_autofs_vfsops.c_autofs_statfs.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/fs/autofs/extr_autofs_vfsops.c_autofs_statfs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mount = type { i32 }
%struct.statfs = type { i64, i64, i64, i64, i64, i64, i32 }

@S_BLKSIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mount*, %struct.statfs*)* @autofs_statfs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @autofs_statfs(%struct.mount* %0, %struct.statfs* %1) #0 {
  %3 = alloca %struct.mount*, align 8
  %4 = alloca %struct.statfs*, align 8
  store %struct.mount* %0, %struct.mount** %3, align 8
  store %struct.statfs* %1, %struct.statfs** %4, align 8
  %5 = load i32, i32* @S_BLKSIZE, align 4
  %6 = load %struct.statfs*, %struct.statfs** %4, align 8
  %7 = getelementptr inbounds %struct.statfs, %struct.statfs* %6, i32 0, i32 6
  store i32 %5, i32* %7, align 8
  %8 = load %struct.statfs*, %struct.statfs** %4, align 8
  %9 = getelementptr inbounds %struct.statfs, %struct.statfs* %8, i32 0, i32 5
  store i64 0, i64* %9, align 8
  %10 = load %struct.statfs*, %struct.statfs** %4, align 8
  %11 = getelementptr inbounds %struct.statfs, %struct.statfs* %10, i32 0, i32 4
  store i64 0, i64* %11, align 8
  %12 = load %struct.statfs*, %struct.statfs** %4, align 8
  %13 = getelementptr inbounds %struct.statfs, %struct.statfs* %12, i32 0, i32 3
  store i64 0, i64* %13, align 8
  %14 = load %struct.statfs*, %struct.statfs** %4, align 8
  %15 = getelementptr inbounds %struct.statfs, %struct.statfs* %14, i32 0, i32 2
  store i64 0, i64* %15, align 8
  %16 = load %struct.statfs*, %struct.statfs** %4, align 8
  %17 = getelementptr inbounds %struct.statfs, %struct.statfs* %16, i32 0, i32 1
  store i64 0, i64* %17, align 8
  %18 = load %struct.statfs*, %struct.statfs** %4, align 8
  %19 = getelementptr inbounds %struct.statfs, %struct.statfs* %18, i32 0, i32 0
  store i64 0, i64* %19, align 8
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
